--- a/OO_Backend/src/main/resources/application.properties
+++ b/OO_Backend/src/main/resources/application.properties
@@ -1,1 +1,14 @@
+# 앱 이름
 spring.application.name=OO_Backend
+
+# 데이터베이스 연결 설정
+spring.datasource.url=jdbc:mysql://localhost:3306/oo_backend?serverTimezone=Asia/Seoul
+spring.datasource.username=root
+spring.datasource.password=2Leejiwon!
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# JPA 설정
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
