--- a/OO_Backend/src/main/resources/application.properties
+++ b/OO_Backend/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.application.name=OO_Backend
 # ?????? ?? ??
 spring.datasource.url=jdbc:mysql://localhost:3306/oo_backend?serverTimezone=Asia/Seoul
 spring.datasource.username=root
-spring.datasource.password=Belle0819!
+spring.datasource.password=0503
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # JPA ??
