--- a/OO_Backend/src/main/resources/application.properties
+++ b/OO_Backend/src/main/resources/application.properties
@@ -11,4 +11,12 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
+# ??? ??? ?? ??
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
+
+# src/main/resources/application.properties
+spring.web.resources.static-locations=classpath:/static/,classpath:/public/,file:public/
+
 server.address=0.0.0.0
